{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 246,
  "lineage": "b749bf17-4944-1117-ee12-28392f8f8e37",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:982450031621:internet-gateway/igw-072bf4a6827864f70",
            "id": "igw-072bf4a6827864f70",
            "owner_id": "982450031621",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-03f2a1c392e4f9d88"
          },
          "dependencies": [
            "aws_vpc.mlm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:982450031621:loadbalancer/app/webAlb/146a8991b9cc582d",
            "arn_suffix": "app/webAlb/146a8991b9cc582d",
            "dns_name": "webAlb-1456444210.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:982450031621:loadbalancer/app/webAlb/146a8991b9cc582d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webAlb",
            "security_groups": [
              "sg-01efe0b6c27204eeb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0113fb06dbf9f7cd8"
              },
              {
                "subnet_id": "subnet-0923b1af2578e0c19"
              }
            ],
            "subnets": [
              "subnet-0113fb06dbf9f7cd8",
              "subnet-0923b1af2578e0c19"
            ],
            "tags": {
              "Environment": "production",
              "Name": "mlm web",
              "Owner": "Roman"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "mlm web",
              "Owner": "Roman"
            },
            "vpc_id": "vpc-03f2a1c392e4f9d88",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.mlm",
            "data.aws_availability_zones.availity_zones",
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:982450031621:listener/app/webAlb/146a8991b9cc582d/6104cf2d974d20c4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:982450031621:targetgroup/tf-example-lb-tg/6528ac8afb33cc48",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:982450031621:listener/app/webAlb/146a8991b9cc582d/6104cf2d974d20c4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:982450031621:loadbalancer/app/webAlb/146a8991b9cc582d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_b",
            "aws_vpc.mlm",
            "data.aws_availability_zones.availity_zones",
            "aws_lb.web",
            "aws_lb_target_group.web",
            "aws_security_group.lb",
            "aws_subnet.public_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:982450031621:targetgroup/tf-example-lb-tg/6528ac8afb33cc48",
            "arn_suffix": "targetgroup/tf-example-lb-tg/6528ac8afb33cc48",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:982450031621:targetgroup/tf-example-lb-tg/6528ac8afb33cc48",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03f2a1c392e4f9d88"
          },
          "dependencies": [
            "aws_vpc.mlm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:982450031621:route-table/rtb-069c9d4e9e97d347b",
            "id": "rtb-069c9d4e9e97d347b",
            "owner_id": "982450031621",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072bf4a6827864f70",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mlm"
            },
            "tags_all": {
              "Name": "mlm"
            },
            "vpc_id": "vpc-03f2a1c392e4f9d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web",
            "aws_vpc.mlm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:982450031621:security-group/sg-01efe0b6c27204eeb",
            "description": "Load balancer traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01efe0b6c27204eeb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "security group 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb",
            "name_prefix": "",
            "owner_id": "982450031621",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlm - lb",
              "Owner": "Roman"
            },
            "tags_all": {
              "Name": "mlm - lb",
              "Owner": "Roman"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f2a1c392e4f9d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mlm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:982450031621:security-group/sg-02835a3c82393a726",
            "description": "Allow connect inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02835a3c82393a726",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "security group 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "security group 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "security group 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_server",
            "name_prefix": "",
            "owner_id": "982450031621",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mlm - http, https, ssh"
            },
            "tags_all": {
              "Name": "mlm - http, https, ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-03f2a1c392e4f9d88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mlm"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:982450031621:subnet/subnet-0da6bd5921d27af1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.64.0/20",
            "id": "subnet-0da6bd5921d27af1c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982450031621",
            "tags": {
              "Name": "mlm-db_a"
            },
            "tags_all": {
              "Name": "mlm-db_a"
            },
            "vpc_id": "vpc-03f2a1c392e4f9d88"
          },
          "dependencies": [
            "aws_vpc.mlm",
            "data.aws_availability_zones.availity_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:982450031621:subnet/subnet-0862dee36e24fd0c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.192.0/20",
            "id": "subnet-0862dee36e24fd0c9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982450031621",
            "tags": {
              "Name": "mlm-db_b"
            },
            "tags_all": {
              "Name": "mlm-db_b"
            },
            "vpc_id": "vpc-03f2a1c392e4f9d88"
          },
          "dependencies": [
            "aws_vpc.mlm",
            "data.aws_availability_zones.availity_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:982450031621:subnet/subnet-07fb4fbea7b1acf6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-07fb4fbea7b1acf6f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982450031621",
            "tags": {
              "Name": "mlm-private_a"
            },
            "tags_all": {
              "Name": "mlm-private_a"
            },
            "vpc_id": "vpc-03f2a1c392e4f9d88"
          },
          "dependencies": [
            "aws_vpc.mlm",
            "data.aws_availability_zones.availity_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:982450031621:subnet/subnet-018987df065e63634",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.160.0/20",
            "id": "subnet-018987df065e63634",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "982450031621",
            "tags": {
              "Name": "mlm-private_b"
            },
            "tags_all": {
              "Name": "mlm-private_b"
            },
            "vpc_id": "vpc-03f2a1c392e4f9d88"
          },
          "dependencies": [
            "aws_vpc.mlm",
            "data.aws_availability_zones.availity_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:982450031621:subnet/subnet-0923b1af2578e0c19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0923b1af2578e0c19",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982450031621",
            "tags": {
              "Name": "mlm-public_a"
            },
            "tags_all": {
              "Name": "mlm-public_a"
            },
            "vpc_id": "vpc-03f2a1c392e4f9d88"
          },
          "dependencies": [
            "aws_vpc.mlm",
            "data.aws_availability_zones.availity_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:982450031621:subnet/subnet-0113fb06dbf9f7cd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.144.0/20",
            "id": "subnet-0113fb06dbf9f7cd8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982450031621",
            "tags": {
              "Name": "mlm-public_b"
            },
            "tags_all": {
              "Name": "mlm-public_b"
            },
            "vpc_id": "vpc-03f2a1c392e4f9d88"
          },
          "dependencies": [
            "aws_vpc.mlm",
            "data.aws_availability_zones.availity_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mlm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:982450031621:vpc/vpc-03f2a1c392e4f9d88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae71e288b36323cb",
            "default_route_table_id": "rtb-069c9d4e9e97d347b",
            "default_security_group_id": "sg-023902ef9c1e927e1",
            "dhcp_options_id": "dopt-d3dac5b5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03f2a1c392e4f9d88",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-069c9d4e9e97d347b",
            "owner_id": "982450031621",
            "tags": {
              "Name": "mlm"
            },
            "tags_all": {
              "Name": "mlm"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}